[package]
name = "playlistrs"
version = "0.1.0"
authors = ["jasmith79 <jasmith79@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.*"
plist = "1"
percent-encoding = "2.1.0"
unicode-normalization = "0.1.12"
regex = "1.3.6"
