[package]
name = "playlistrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.*"
serde = { version = "1.0", features = ["derive"] }
plist = "1"
unicode-normalization = "0.1.20"
url = "2.3.1"
partial_application = "0.2.1"

