[package]
name = "playlistrs"
version = "0.2.0"
edition = "2021"
description = "Convert iTunes Playlists to m3u"
authors = ["Jared Smith <jasmith79@gmail.com>"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/jasmith79/playlistrs"
license = "MIT"
repository = "https://github.com/jasmith79/playlistrs"
version = "0.2.0"

[[bin]]
name = "playlistrs"

[dependencies]
clap = "4.*"
serde = { version = "1.0", features = ["derive"] }
plist = "1"
unicode-normalization = "0.1.20"
url = "2.3.1"
partial_application = "0.2.1"
anyhow = "1.0.71"

